[project]
name = "unlimitedworlds"
version = "0.1.0"
description = "Engine for grid worlds: core runtime and stepping."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Alexander Yashnyk" }]

# dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
